--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -29,64 +29,137 @@
       </ul>
     </header>
 
-    <main class="main">
-      <section class="contenedor1">
-        <h1 class="titulo__principal">
-          Payments
-          <br />infrastructure <br />for the world
-        </h1>
+    <main>
+      <div class="main">
+        <section class="contenedor1">
+          <h1 class="titulo__principal">
+            Payments
+            <br />infrastructure <br />for the world
+          </h1>
 
-        <img
-          class="hero__phone"
-          src="../../imagenesreto2/hero-phone.png"
-          alt="hero-phone"
-        />
+          <img
+            class="hero__phone"
+            src="../../imagenesreto2/hero-phone.png"
+            alt="hero-phone"
+          />
 
-        <p class="parrafo1">
-          Tons of companies all over the world use Swipe´s seamless platform to
-          mange their businesses's entgire financial transaction infrastructure
-          online.
-        </p>
-        <div class="botones">
-          <button class="boton__start">
+          <p class="parrafo1">
+            Tons of companies all over the world use Swipe´s seamless platform
+            to mange their businesses's entgire financial transaction
+            infrastructure online.
+          </p>
+          <div class="botones">
+            <button class="boton__start">
+              Start now
+              <img
+                src="../../imagenesreto2/arrow-right-light.svg"
+                alt="iconoflecha"
+              />
+            </button>
+            <button class="boton__contact">
+              Contact sales
+              <img
+                src="../../imagenesreto2/arrow-right-purple.svg"
+                alt="iconoflecha"
+              />
+            </button>
+          </div>
+        </section>
+
+        <section class="lista__iconos">
+          <img
+            src="../../imagenesreto2/instacart.png"
+            alt="instacart"
+            class="iconos"
+          />
+          <img
+            src="../../imagenesreto2/salesforce.png"
+            alt="salesforce"
+            class="iconos"
+          />
+          <img
+            src="../../imagenesreto2/amazon.png"
+            alt="amazon"
+            class="iconos"
+          />
+          <img src="../../imagenesreto2/slack.png" alt="slack" class="iconos" />
+          <img
+            src="../../imagenesreto2/shopify.png"
+            alt="shopify"
+            class="iconos"
+          />
+          <img
+            src="../../imagenesreto2/google.png"
+            alt="google"
+            class="iconos"
+          />
+          <img src="../../imagenesreto2/lyft.png" alt="lyft" class="iconos" />
+          <img src="../../imagenesreto2/zoom.png" alt="zoom" class="iconos" />
+        </section>
+      </div>
+
+      <div class="contenedor__seccion2">
+        <section class="seccion2">
+          <h3 class="subtitulo__seccion2">Unified platform</h3>
+          <h2 class="titulo__seccion2">
+            All the payment products you'll ever need
+          </h2>
+          <p class="parrafo__seccion2">
+            We've got everything you'll need and more to build websites and apps
+            that handle payments, payouts, and much more.Swipe's products power
+            payments for
+            <span class="parrafo-renglon">all kinds of retailers</span>,
+            <span class="parrafo-renglon">all kinds of businesses</span>,
+            <span class="parrafo-renglon">softwareplatforms & markeplace</span>,
+            and everything in between.
+          </p>
+
+          <p class="parrafo__seccion2">
+            We also help companies
+            <span class="parrafo-renglon">tackle fraud</span>,
+            <span class="parrafo-renglon">issue invoices</span>,
+            <span class="parrafo-renglon">send virtual and physical cards</span
+            >, <span class="parrafo-renglon">manage financing</span>,
+            <span>wrangle business spend</span>, and much more.
+          </p>
+
+          <button class="boton__star2">
             Start now
             <img
-              src="../../imagenesreto2/arrow-right-light.svg"
-              alt="iconoflecha"
+              src="./imagenesreto2/arrow-right-light.svg"
+              alt="flecha Start"
             />
           </button>
-          <button class="boton__contact">
-            Contact sales
-            <img
-              src="../../imagenesreto2/arrow-right-purple.svg"
-              alt="iconoflecha"
-            />
-          </button>
-        </div>
-      </section>
+        </section>
 
-      <section class="lista__iconos">
-        <img
-          src="../../imagenesreto2/instacart.png"
-          alt="instacart"
-          class="iconos"
-        />
-        <img
-          src="../../imagenesreto2/salesforce.png"
-          alt="salesforce"
-          class="iconos"
-        />
-        <img src="../../imagenesreto2/amazon.png" alt="amazon" class="iconos" />
-        <img src="../../imagenesreto2/slack.png" alt="slack" class="iconos" />
-        <img
-          src="../../imagenesreto2/shopify.png"
-          alt="shopify"
-          class="iconos"
-        />
-        <img src="../../imagenesreto2/google.png" alt="google" class="iconos" />
-        <img src="../../imagenesreto2/lyft.png" alt="lyft" class="iconos" />
-        <img src="../../imagenesreto2/zoom.png" alt="zoom" class="iconos" />
-      </section>
+        <div class="imagenes__seccion2">
+          <img
+            src="./imagenesreto2/credit-card.png"
+            alt="card"
+            id="tarjeta"
+            class="imagenseccion2 tarjeta"
+          />
+          <img
+            src="./imagenesreto2/slack-invoice.png"
+            alt="card con slack"
+            id="imagenSlack"
+            class="imagenseccion2 imagenSlack"
+          />
+          <img
+            src="./imagenesreto2/phone.png"
+            alt="phone"
+            id="celular"
+            class="imagenseccion2 celular"
+          />
+          <img
+            src="./imagenesreto2/dash.png"
+            alt="tabla de tendencias "
+            id="tendencias"
+            class="imagenseccion2 tendencias"
+          />
+        </div>
+        <div class="diagonal-azul"></div>
+      </div>
     </main>
     <footer></footer>
   </body>
