--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -160,6 +160,63 @@
         </div>
         <div class="diagonal-azul"></div>
       </div>
+
+      <section class="seccion3">
+        <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
+
+        <h2 class="titulo__seccion3">
+          The world's best and most intuitive APIs
+        </h2>
+
+        <p class="parrafo__seccion3">
+          We abstract the hard stuff away so your teams don't can focus on
+          builing good technology, instead of spending time and money
+          reinventing the wheel.
+        </p>
+
+        <button class="boton__star3">
+          Start now
+          <img src="./imagenesreto2/arrow-right-dark.svg" alt="flecha Start" />
+        </button>
+
+        <img
+          src="./imagenesreto2/tools-icon.png"
+          alt="icono tools"
+          class="iconos__seccion3"
+        />
+
+        <h4 class="tools">Tools for all stacks</h4>
+        <p class="parrafo__icono1">
+          We offer front end and back end libraries in some of the most widely
+          used technologies, old and new.
+        </p>
+
+        <button class="boton__See">
+          See libraries
+          <img src="./imagenesreto2/arrow-right-blue.svg" alt="flecha See" />
+        </button>
+
+        <img
+          src="./imagenesreto2/cube-icon.png"
+          alt="icono custom"
+          class="iconos__seccion3"
+        />
+
+        <h4 class="custom">Custom Integrations</h4>
+
+        <p class="parrafo__icono2">
+          Use intregations for systems like Shopify, WooCommerce,NetSuite, and
+          more.
+        </p>
+
+        <button class="boton__Explore">
+          Explore partners
+          <img
+            src="./imagenesreto2/arrow-right-blue.svg"
+            alt="flecha Explore"
+          />
+        </button>
+      </section>
     </main>
     <footer></footer>
   </body>
