--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -158,64 +158,113 @@
             class="imagenseccion2 tendencias"
           />
         </div>
-        <div class="diagonal-azul"></div>
       </div>
 
-      <section class="seccion3">
-        <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
+      <section class="seccion3">    
 
-        <h2 class="titulo__seccion3">
-          The world's best and most intuitive APIs
-        </h2>
+          <div class="diagonal-azul"></div>
 
-        <p class="parrafo__seccion3">
-          We abstract the hard stuff away so your teams don't can focus on
-          builing good technology, instead of spending time and money
-          reinventing the wheel.
-        </p>
+          <div class="contenedor__seccion3">
 
-        <button class="boton__star3">
-          Start now
-          <img src="./imagenesreto2/arrow-right-dark.svg" alt="flecha Start" />
-        </button>
+          <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
+          <h2 class="titulo__seccion3">
+            The world's best and most intuitive APIs
+          </h2>
+          <p class="parrafo__seccion3">
+            We abstract the hard stuff away so your teams don't can focus on
+            builing good technology, instead of spending time and money
+            reinventing the wheel.
+          </p>
 
-        <img
-          src="./imagenesreto2/tools-icon.png"
-          alt="icono tools"
-          class="iconos__seccion3"
-        />
+          <button class="boton__star3">
+            Start now
+            <img
+              src="./imagenesreto2/arrow-right-dark.svg"
+              alt="flecha Start"
+            />
+          </button>
 
-        <h4 class="tools">Tools for all stacks</h4>
-        <p class="parrafo__icono1">
-          We offer front end and back end libraries in some of the most widely
-          used technologies, old and new.
-        </p>
-
-        <button class="boton__See">
-          See libraries
-          <img src="./imagenesreto2/arrow-right-blue.svg" alt="flecha See" />
-        </button>
-
-        <img
-          src="./imagenesreto2/cube-icon.png"
-          alt="icono custom"
-          class="iconos__seccion3"
-        />
-
-        <h4 class="custom">Custom Integrations</h4>
-
-        <p class="parrafo__icono2">
-          Use intregations for systems like Shopify, WooCommerce,NetSuite, and
-          more.
-        </p>
-
-        <button class="boton__Explore">
-          Explore partners
           <img
-            src="./imagenesreto2/arrow-right-blue.svg"
-            alt="flecha Explore"
+            src="./imagenesreto2/tools-icon.png"
+            alt="icono tools"
+            class="iconos__seccion3"
           />
-        </button>
+
+          <h4 class="titulos__iconos3">Tools for all stacks</h4>
+          <p class="parrafos__seccion3">
+            We offer front end and back end libraries in some of the most widely
+            used technologies, old and new.
+          </p>
+
+          <button class="direccionador__seccion3">
+            See libraries
+            <img src="./imagenesreto2/arrow-right-blue.svg" alt="flecha See" />
+          </button>
+
+          <img
+            src="./imagenesreto2/cube-icon.png"
+            alt="icono custom"
+            class="iconos__seccion3"
+          />
+
+          <h4 class="titulos__iconos3">Custom Integrations</h4>
+
+          <p class="parrafos__seccion3">
+            Use intregations for systems like Shopify, WooCommerce,NetSuite, and
+            more.
+          </p>
+
+          <button class="direccionador__seccion3">
+            Explore partners
+            <img
+              src="./imagenesreto2/arrow-right-blue.svg"
+              alt="flecha Explore"
+            />
+          </button>
+        </dir>
+      </section>
+
+      <section class="seccion4">
+        <h3 class="subtitulo__seccion4">Why Swipe</h3>
+
+        <h2 class="titulo__seccion4">A tech-first approach to finance</h2>
+
+        <img src="./imagenesreto2/cloud-icon.png" alt="icono Efficient" class="iconos__seccion4" />
+
+        <h4 class="titulos__iconos">Efficient Always</h4>
+
+        <p class="seccion4__parrafo">
+          we've optimized every level of the finance stack, from integrations to
+          prebuilt checkout flows - no detail has been spared.
+        </p>
+
+        <img src="./imagenesreto2/cycle-icon.png" alt="icono Fast" class="iconos__seccion4"/>
+
+        <h4 class="titulos__iconos">Fast-Improving</h4>
+
+        <p class="seccion4__parrafo">
+          We make constant updates and improvements to help you stay on the
+          cutting edge of your industry, deploying to production around 20x per
+          day!
+        </p>
+
+        <img src="./imagenesreto2/shield-icon.png" alt="icono Tried" class="iconos__seccion4" />
+
+        <h4 class="titulos__iconos">Tried and true</h4>
+
+        <p class="seccion4__parrafo">
+          Our systems operative with 100% uptime,with scalability and uptimes as
+          a guarantee. Swipe is super duper certified so don't worry
+        </p>
+
+        <img src="./imagenesreto2/bars-icon.png" alt="icono Crazy" class="iconos__seccion4"/>
+
+        <h4 class="titulos__iconos">Crazy Optimized</h4>
+
+        <p class="seccion4__parrafo">
+          We use machine learning trained on billions of datapoinst to help
+          optimize all products, from fraud to revenue recovery and more.
+        </p>
       </section>
     </main>
     <footer></footer>
