--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -101,9 +101,11 @@
       <div class="contenedor__seccion2">
         <section class="seccion2">
           <h3 class="subtitulo__seccion2">Unified platform</h3>
+
           <h2 class="titulo__seccion2">
             All the payment products you'll ever need
           </h2>
+
           <p class="parrafo__seccion2">
             We've got everything you'll need and more to build websites and apps
             that handle payments, payouts, and much more.Swipe's products power
@@ -139,18 +141,21 @@
             id="tarjeta"
             class="imagenseccion2 tarjeta"
           />
+
           <img
             src="./imagenesreto2/slack-invoice.png"
             alt="card con slack"
             id="imagenSlack"
             class="imagenseccion2 imagenSlack"
           />
+
           <img
             src="./imagenesreto2/phone.png"
             alt="phone"
             id="celular"
             class="imagenseccion2 celular"
           />
+
           <img
             src="./imagenesreto2/dash.png"
             alt="tabla de tendencias "
@@ -160,16 +165,15 @@
         </div>
       </div>
 
-      <section class="seccion3">    
+      <section class="seccion3">
+        <div class="diagonal-azul"></div>
 
-          <div class="diagonal-azul"></div>
-
-          <div class="contenedor__seccion3">
-
+        <div class="contenedor__seccion3">
           <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
           <h2 class="titulo__seccion3">
             The world's best and most intuitive APIs
           </h2>
+
           <p class="parrafo__seccion3">
             We abstract the hard stuff away so your teams don't can focus on
             builing good technology, instead of spending time and money
@@ -191,6 +195,7 @@
           />
 
           <h4 class="titulos__iconos3">Tools for all stacks</h4>
+
           <p class="parrafos__seccion3">
             We offer front end and back end libraries in some of the most widely
             used technologies, old and new.
@@ -221,7 +226,7 @@
               alt="flecha Explore"
             />
           </button>
-        </dir>
+        </div>
       </section>
 
       <section class="seccion4">
@@ -229,42 +234,109 @@
 
         <h2 class="titulo__seccion4">A tech-first approach to finance</h2>
 
-        <img src="./imagenesreto2/cloud-icon.png" alt="icono Efficient" class="iconos__seccion4" />
+        <div class="contenedor__iconos4">
+          <img
+            src="./imagenesreto2/cloud-icon.png"
+            alt="icono Efficient"
+            class="iconos__seccion4"
+          />
 
-        <h4 class="titulos__iconos">Efficient Always</h4>
+          <h4 class="titulos__iconos">Efficient Always</h4>
 
-        <p class="seccion4__parrafo">
-          we've optimized every level of the finance stack, from integrations to
-          prebuilt checkout flows - no detail has been spared.
-        </p>
+          <p class="seccion4__parrafo">
+            we've optimized every level of the finance stack, from integrations
+            to prebuilt checkout flows - no detail has been spared.
+          </p>
 
-        <img src="./imagenesreto2/cycle-icon.png" alt="icono Fast" class="iconos__seccion4"/>
+          <img
+            src="./imagenesreto2/cycle-icon.png"
+            alt="icono Fast"
+            class="iconos__seccion4"
+          />
 
-        <h4 class="titulos__iconos">Fast-Improving</h4>
+          <h4 class="titulos__iconos">Fast-Improving</h4>
 
-        <p class="seccion4__parrafo">
-          We make constant updates and improvements to help you stay on the
-          cutting edge of your industry, deploying to production around 20x per
-          day!
-        </p>
+          <p class="seccion4__parrafo">
+            We make constant updates and improvements to help you stay on the
+            cutting edge of your industry, deploying to production around 20x
+            per day!
+          </p>
 
-        <img src="./imagenesreto2/shield-icon.png" alt="icono Tried" class="iconos__seccion4" />
+          <img
+            src="./imagenesreto2/shield-icon.png"
+            alt="icono Tried"
+            class="iconos__seccion4"
+          />
 
-        <h4 class="titulos__iconos">Tried and true</h4>
+          <h4 class="titulos__iconos">Tried and true</h4>
 
-        <p class="seccion4__parrafo">
-          Our systems operative with 100% uptime,with scalability and uptimes as
-          a guarantee. Swipe is super duper certified so don't worry
-        </p>
+          <p class="seccion4__parrafo">
+            Our systems operative with 100% uptime,with scalability and uptimes
+            as a guarantee. Swipe is super duper certified so don't worry
+          </p>
 
-        <img src="./imagenesreto2/bars-icon.png" alt="icono Crazy" class="iconos__seccion4"/>
+          <img
+            src="./imagenesreto2/bars-icon.png"
+            alt="icono Crazy"
+            class="iconos__seccion4"
+          />
 
-        <h4 class="titulos__iconos">Crazy Optimized</h4>
+          <h4 class="titulos__iconos">Crazy Optimized</h4>
 
-        <p class="seccion4__parrafo">
-          We use machine learning trained on billions of datapoinst to help
-          optimize all products, from fraud to revenue recovery and more.
-        </p>
+          <p class="seccion4__parrafo">
+            We use machine learning trained on billions of datapoinst to help
+            optimize all products, from fraud to revenue recovery and more.
+          </p>
+        </div>
+      </section>
+
+      <section class="seccion5">
+        <div class="diagonal-azul5"></div>
+
+        <img
+          src="./imagenesreto2/global-graphic.png"
+          alt="grafico mundo"
+          class="imagen__mundo"
+        />
+
+        <div class="seccion__global">
+          <h3 class="subtitulo__seccion5">Global scale</h3>
+
+          <h2 class="titulo__seccion5">A structure for global businesses</h2>
+
+          <p class="parrafo__seccion5">
+            Swipe makes moving money simple, borderless,and programmable-just
+            like the rest of the internet. We have teams all over the world and
+            we process billions and billions of dollars yearly for
+            <span class="parrafo-renglon5">startups,</span>
+            <span class="parrafo-renglon5">Fortune 500s,</span>
+            <span class="parrafo-renglon5">and everything in between.</span>
+          </p>
+
+          <h3 class="indicadores__seccion5">250M+</h3>
+
+          <p class="parrafo__indicadores5">
+            API requests each day, peaking at 15,000 requests a second.
+          </p>
+
+          <h3 class="indicadores__seccion5">97%</h3>
+
+          <p class="parrafo__indicadores5">
+            of US adults have bought from businesses that use Swipe
+          </p>
+
+          <h3 class="indicadores__seccion5">135+</h3>
+
+          <p class="parrafo__indicadores5">
+            currencies and payment methods supported
+          </p>
+
+          <h3 class="indicadores__seccion5">35+</h3>
+
+          <p class="parrafo__indicadores5">
+            countries with local, acquiring, optimizing acceptance rates
+          </p>
+        </div>
       </section>
     </main>
     <footer></footer>
