--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -338,6 +338,97 @@
           </p>
         </div>
       </section>
+
+      <section class="seccion6">
+        <h3 class="subtitulo__seccion6">Virtual events</h3>
+
+        <h2 class="titulos__seccion6">Check out Seccions now!</h2>
+
+        <p class="parrafos__seccion6">
+          Swipe Sessions is our annual conference -it's now availableto watch on
+          demand!Check it out and become an "internet economy" genius, and see
+          how Swipe can transform the way you dobusiness online.
+        </p>
+
+        <button class="boton__star6">
+          Start now
+          <img src="./imagenesreto2/arrow-right-light.svg" alt="flecha Start" />
+        </button>
+
+        <div class="tarjeta__seccion6">
+          <div class="diagonal__seccion6"></div>
+          <img
+            src="./imagenesreto2/swipe-sessions.png"
+            alt="swipe sessions"
+            class="logo6"
+          />
+          <div class="contenedor_avatar">
+            <img
+              src="./imagenesreto2/avatar1.png"
+              alt="avatar femenino"
+              class="avatar__femenino"
+            />
+            <img
+              src="./imagenesreto2/avatar2.png"
+              alt="avatar masculino"
+              class="avatar__masculino"
+            />
+          </div>
+          <div class="texto__tarjeta6">
+            <h3 class="titulo__tarjeta6">Keynote</h3>
+            <p class="parrafo__tarjeta">
+              Everything you need to know about the internet economy
+            </p>
+          </div>
+        </div>
+
+        <h2 class="titulos__seccion6">What are you waiting for?</h2>
+
+        <p class="parrafos__seccion6">
+          Explore
+          <span class="parrafo__renglon6">Swipe</span>
+          now, or create an account and start accepting payments today! If you
+          need a costom package for your business, let's chat today.
+        </p>
+
+        <button class="boton__star6">
+          Start now
+          <img src="./imagenesreto2/arrow-right-light.svg" alt="flecha Start" />
+        </button>
+        <img
+          src="./imagenesreto2/shield-icon.png"
+          alt="icono Tried"
+          class="iconos__seccion6"
+        />
+
+        <h4 class="titulos__iconos6">Always know what you pay</h4>
+
+        <p class="seccion6__parrafo">
+          Integrate per-transaction princing with no hidden fees.
+        </p>
+
+        <img
+          src="./imagenesreto2/bars-icon.png"
+          alt="icono Crazy"
+          class="iconos__seccion6"
+        />
+
+        <button class="direccionador__seccion6">
+          Princing details
+          <img src="./imagenesreto2/arrow-right-purple.svg" alt="flecha See" />
+        </button>
+
+        <h4 class="titulos__iconos6">Start your integration</h4>
+
+        <p class="seccion6__parrafo">
+          Get up and running with Stripe in as little as 10 minutes.
+        </p>
+
+        <button class="direccionador__seccion6">
+          API reference
+          <img src="./imagenesreto2/arrow-right-purple.svg" alt="flecha See" />
+        </button>
+      </section>
     </main>
     <footer></footer>
   </body>
