--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -430,6 +430,69 @@
         </button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="seccion7">
+        <div class="columnas">
+          <img
+            src="./imagenesreto2/logo-dark.svg"
+            alt="logo dark"
+            class="logo__footer"
+          />
+
+          <div>
+            <img
+              src="./imagenesreto2/location-icon.png"
+              alt="inoco flecha"
+              class="iconos__footer"
+            />
+            <span>United States</span>
+          </div>
+
+          <div>
+            <img
+              src="./imagenesreto2/comment-icon.png"
+              alt="inoco flecha"
+              class="iconos__footer"
+            />
+            <span>English (United States)</span>
+          </div>
+        </div>
+
+        <div class="columnas">
+          <h3>Products</h3>
+          <ul class="ul">
+            <li>Atlas</li>
+            <li>Billing</li>
+            <li>Invoicing</li>
+            <li>Payments</li>
+            <li>Chechout</li>
+            <li>Identity</li>
+          </ul>
+        </div>
+        <div class="columnas">
+          <h3>Use Cases</h3>
+          <ul class="ul">
+            <li>eCommerce</li>
+            <li>SaaS</li>
+            <li>Markeplace</li>
+            <li>Embedded Finance</li>
+            <li>Crypto</li>
+            <li>Creator Economy</li>
+          </ul>
+        </div>
+
+        <div class="columnas">
+          <h3>Resources</h3>
+          <ul class="ul">
+            <li>Support Center</li>
+            <li>Guides</li>
+            <li>Blog</li>
+            <li>Licenses</li>
+            <li>Privacy & Terms</li>
+            <li>Cookie Settings</li>
+          </ul>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
