--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reto2</title>
     <link rel="stylesheet" href="styleseccion1.css" />
+    <link rel="stylesheet" href="styleseccion1media.css" />
   </head>
   <body>
     <header>
@@ -18,7 +19,9 @@
         <li class="barra__opciones">Developers</li>
         <li class="barra__opciones">Resources</li>
         <li class="barra__opciones">Pricing</li>
-        <li class="barra__opciones"><button id="Sign">Sign In</button></li>
+        <li class="barra__opciones">
+          <button class="boton__sing">Sign In</button>
+        </li>
         <li class="menu__hamburguesa">
           <button>
             <div class="lineas"></div>
@@ -31,37 +34,40 @@
 
     <main class="main">
       <section class="contenedor1">
-        <h1 class="titulo__principal">
-          Payments
-          <br />infrastructure <br />for the world
-        </h1>
+        <div>
+          <h1 class="titulo__principal">
+            Payments
+            <br />infrastructure <br />for the world
+          </h1>
 
-        <img
-          class="hero__phone"
-          src="../../imagenesreto2/hero-phone.png"
-          alt="hero-phone"
-        />
-
-        <p class="parrafo1">
-          Tons of companies all over the world use Swipe´s seamless platform to
-          mange their businesses's entgire financial transaction infrastructure
-          online.
-        </p>
-        <div class="botones">
-          <button class="boton__start">
-            Start now
-            <img
-              src="../../imagenesreto2/arrow-right-light.svg"
-              alt="iconoflecha"
-            />
-          </button>
-          <button class="boton__contact">
-            Contact sales
-            <img
-              src="../../imagenesreto2/arrow-right-purple.svg"
-              alt="iconoflecha"
-            />
-          </button>
+          <p class="parrafo1">
+            Tons of companies all over the world use Swipe´s seamless platform
+            to mange their businesses's entgire financial transaction
+            infrastructure online.
+          </p>
+          <div class="botones">
+            <button class="boton__start">
+              Start now
+              <img
+                src="../../imagenesreto2/arrow-right-light.svg"
+                alt="iconoflecha"
+              />
+            </button>
+            <button class="boton__contact">
+              Contact sales
+              <img
+                src="../../imagenesreto2/arrow-right-purple.svg"
+                alt="iconoflecha"
+              />
+            </button>
+          </div>
+        </div>
+        <div>
+          <img
+            class="hero__phone"
+            src="../../imagenesreto2/hero-phone.png"
+            alt="hero-phone"
+          />
         </div>
       </section>
 
